[gd_scene load_steps=2 format=2]

[ext_resource path="res://cenaPrincipal.gd" type="Script" id=1]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="LineEdit" type="LineEdit" parent="."]
margin_left = 365.0
margin_top = 166.0
margin_right = 633.0
margin_bottom = 205.0

[node name="Label" type="Label" parent="."]
modulate = Color( 0.027451, 0, 0, 1 )
self_modulate = Color( 0.0313726, 0, 0, 1 )
margin_left = 373.0
margin_top = 95.0
margin_right = 631.0
margin_bottom = 129.0
align = 1
valign = 1

[node name="Button" type="Button" parent="."]
margin_left = 440.0
margin_top = 274.0
margin_right = 575.0
margin_bottom = 307.0
text = "verificar resultado"

[node name="Button1" type="Button" parent="."]
margin_left = 421.0
margin_top = 41.0
margin_right = 556.0
margin_bottom = 74.0
text = "mostrar equacao"

[node name="Button2" type="Button" parent="."]
margin_left = 431.0
margin_top = 373.0
margin_right = 573.0
margin_bottom = 413.0
text = "Pr√≥xima"

[node name="Button3" type="Button" parent="."]
margin_left = 427.0
margin_top = 426.0
margin_right = 569.0
margin_bottom = 466.0
text = "Tentar Novamente"

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button1" to="." method="_on_Button1_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_Button3_pressed"]
